# Planted

./: .env.example  .gitignore  .jshintrc  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  COPILOT-ISSUE-INSTRUCTIONS.md  LICENSE  MANIFEST.in  MIGRATION_SETUP_SUMMARY.md  PLANT_SYNC_README.md  README.md  RENDER_DEPLOYMENT.md  SETUP.md  alembic.ini  app.py  benchmark_indexes.py  main.py  pyproject.toml  render.yaml  requirements.txt  run.bat  run.sh  simple_test.py  test_plant_sync.py
.github/: copilot-instructions.md
.github/workflows/: pylint.yml
alembic/: README
alembic/versions/: e01efa1a265a_initial_schema.py
docs/: README.md  WEATHER_CACHING.md  api.md  architecture.md  database_indexes.md  database_migrations.md  deployment.md  error_handling.md  logging.md  plant_data_sources.md
garden_manager/config/: __init__.py  logging_config.py
garden_manager/database/: default_plants_data.py  garden_db.py  models.py  plant_data.py
garden_manager/database/seeds/: default_plants.json
garden_manager/services/: auth_service.py  location_service.py  scheduler.py  weather_service.py
garden_manager/utils/: date_utils.py  plant_utils.py
garden_manager/web/blueprints/: utils.py
garden_manager/web/blueprints/api/: __init__.py
garden_manager/web/templates/: add_plant.html  base.html  care.html  create_plot.html  dashboard.html  edit_plant.html  error.html  garden.html  guest_mode.html  help.html  login.html  plant_detail.html  plant_to_plot.html  plants.html  reset_password.html  settings.html  signup.html  view_plot.html  weather.html
scripts/: backup_database.sh
tests/: README.md  conftest.py  test_dirty_data_demo.py
tests/integration/: test_plot_viewing.py
tests/test_data/: TEST_DATA_SUMMARY.md
tests/test_data/dirty_data/: README.md  duplicate_entries.json  extra_unknown_fields.json  invalid_data_types.json  malformed_json.json  missing_required_fields.json  mixed_valid_invalid.json  null_empty_values.json  out_of_range_values.json  special_characters.json
tests/unit/: test_api_timeouts.py  test_auth_service.py  test_csrf_protection.py  test_database_indexes.py  test_error_handlers.py  test_garden_database.py  test_location_detection_ui.py  test_location_update.py  test_logging_config.py  test_n_plus_1_optimization.py  test_plant_edit_delete.py  test_plant_suggestions.py  test_planted_item_properties.py  test_production_config.py  test_rate_limiting.py  test_sample.py  test_secret_key_security.py  test_weather_caching.py  test_weather_windspeed.py
(+14 files in other folders)
